# KeyboardTesterWasm

./: .gitignore  README.md
docs/: app.js  index.html  styles.css
docs/pkg/: keyboard_tester_wasm.d.ts  keyboard_tester_wasm.js  keyboard_tester_wasm_bg.wasm.d.ts  keyboard_tester_wasm_bg_base64.js  package.json
scripts/: embed-wasm.sh
wasm/: Cargo.toml
wasm/src/: lib.rs
